# ml-code-snippets

./: README.md  pyproject.toml
NN/: simple_nn_classifier_tf.py
basic-ml/linear-regression/: linear-regression-scikit.py  linear-regression.py  linear-regression2.py
decision_tree/: decisiontree.py
pytorch-tutorial/: autograd.py  cifar-test.py  cifar-train.py  cifar_net.pth  nn.py  tensors.py
variable_elimination/: aria.py  holmes.py  holmes2.py  var_elimination.py
